--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,41 @@
-ubind C-b
+set-option -g default-shell /bin/zsh
+
+unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",*:RGB"
+set -sg escape-time 50
+
+# install TPM (git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm)
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Catppucin
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_status_modules_right 'directory host date_time'
+
+set -g @catppuccin_window_middle_separator "█ "
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_date_time_text '%H:%M:%S'
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
+run '~/.tmux/plugins/tpm/tpm'
+
