--- a/roles/system/tasks/debian.yml
+++ b/roles/system/tasks/debian.yml
@@ -1,5 +1,5 @@
 ---
-- name: "System | Update APT Repos and Upgrade APT Packages"
+- name: System | Update APT Repos and Upgrade APT Packages
   ansible.builtin.apt:
     update_cache: true
     upgrade: full
@@ -8,20 +8,20 @@
     autoclean: true
   become: true
 
-- name: "System | Set sudo"
+- name: System | Set sudo
   ansible.builtin.template:
     src: user_sudo.j2
     dest: "/etc/sudoers.d/{{ ansible_env['USER'] }}"
-    mode: "0644"
+    mode: 0644
   become: true
 
-- name: "System | Ensure group exists for current user"
+- name: System | Ensure group exists for current user
   ansible.builtin.group:
     name: "{{ host_user }}"
     state: present
   become: true
 
-- name: "System | Ensure user is in group {{ host_user }}"
+- name: System | Ensure user is in group {{ host_user }}
   ansible.builtin.user:
     name: "{{ host_user }}"
     groups: "{{ host_user }}"
