--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -1,16 +1,16 @@
 ---
-- name: "tmux | Install tmux"
+- name: Tmux | Install tmux
   ansible.builtin.apt:
     name: tmux
     state: present
   become: true
 
-- name: "tmux | Install TPM"
+- name: Tmux | Install TPM
   ansible.builtin.git:
     repo: https://github.com/tmux-plugins/tpm
     dest: ~/.tmux/plugins/tpm
 
-- name: "tmux | Configure tmux"
+- name: Tmux | Configure tmux
   ansible.builtin.copy:
     src: tmux
     dest: "{{ ansible_user_dir }}/.config/"
