--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -1,8 +1,23 @@
 ---
-- name: Run Debian Tasks
-  ansible.builtin.import_tasks: debian.yml
-  when: ansible_os_family == 'Debian'
+- name: SSH | Copy SSH keys
+  copy:
+    dest: "{{ ansible_user_dir }}/.ssh/{{ ssh_key_item.key }}"
+    content: "{{ ssh_key_item.value }}"
+    mode: 0600
+  no_log: true
+  loop_control:
+    loop_var: ssh_key_item
+  with_items: "{{ ssh_key | default({}) | dict2items }}"
 
-- name: Run Darwin Tasks
-  ansible.builtin.import_tasks: darwin.yml
-  when: ansible_os_family == 'Darwin'
+- name: SSH | Configure SSH config file
+  ansible.builtin.blockinfile:
+    path: "{{ ansible_user_dir }}/.ssh/config"
+    block: |
+      Host {{ item.split(':')[0] }}
+        HostName {{ item.split(':')[1] }}
+        User {{ item.split(':')[2] }}
+    marker: "# {mark} ANSIBLE MANAGED BLOCK FOR {{ item.split(':')[0] }}"
+    create: yes
+  no_log: true
+  with_items: "{{ ssh_hosts }}"
+
