refactor: running roles

--- a/main.yml
+++ b/main.yml
@@ -32,16 +32,9 @@
       tags:
         - always
 
-  tasks:
-    - name: Set roles
-      ansible.builtin.set_fact:
-        run_roles: "{{ ansible_run_tags != ['all'] and ansible_run_tags or default_roles | difference(exclude_roles | default([])) }}"
-      tags:
-        - always
-
     - name: Display roles
       ansible.builtin.debug:
-        var: run_roles
+        var: default_roles
       tags:
         - always
 
@@ -53,6 +46,6 @@
         name: "{{ roles_item }}"
       loop_control:
         loop_var: roles_item
-      with_items: "{{ run_roles }}"
+      with_items: "{{ default_roles }}"
       tags:
         - always
