Feat: tmux-sessionizer

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",*:RGB"
 set -sg escape-time 50
